// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`leadingTrim renders 0 1`] = `
Array [
  .c0 {
  leading-trim: 0;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: 0;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: 0;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders function 1`] = `
Array [
  .c0 {
  leading-trim: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: has;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: has;
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders invalid theme path 1`] = `
Array [
  .c0 {
  leading-trim: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders negative number 1`] = `
Array [
  .c0 {
  leading-trim: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  leading-trim: July;
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    leading-trim: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: July;
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    leading-trim: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    leading-trim: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    leading-trim: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    leading-trim: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    leading-trim: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    leading-trim: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    leading-trim: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    leading-trim: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    leading-trim: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    leading-trim: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  leading-trim: July;
}

@media May {
  .c0 {
    leading-trim: August;
  }
}

@media April {
  .c0 {
    leading-trim: September;
  }
}

@media January {
  .c0 {
    leading-trim: November;
  }
}

@media April {
  .c0 {
    leading-trim: August;
  }
}

@media June {
  .c0 {
    leading-trim: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: July;
}

@media May {
  .c0 {
    leading-trim: August;
  }
}

@media April {
  .c0 {
    leading-trim: September;
  }
}

@media January {
  .c0 {
    leading-trim: November;
  }
}

@media April {
  .c0 {
    leading-trim: August;
  }
}

@media June {
  .c0 {
    leading-trim: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    leading-trim: November;
  }
}

@media April {
  .c0 {
    leading-trim: January;
  }
}

@media January {
  .c0 {
    leading-trim: December;
  }
}

@media April {
  .c0 {
    leading-trim: April;
  }
}

@media June {
  .c0 {
    leading-trim: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    leading-trim: November;
  }
}

@media April {
  .c0 {
    leading-trim: January;
  }
}

@media January {
  .c0 {
    leading-trim: December;
  }
}

@media April {
  .c0 {
    leading-trim: April;
  }
}

@media June {
  .c0 {
    leading-trim: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    leading-trim: July;
  }
}

@media April {
  .c0 {
    leading-trim: August;
  }
}

@media January {
  .c0 {
    leading-trim: September;
  }
}

@media April {
  .c0 {
    leading-trim: November;
  }
}

@media June {
  .c0 {
    leading-trim: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    leading-trim: July;
  }
}

@media April {
  .c0 {
    leading-trim: August;
  }
}

@media January {
  .c0 {
    leading-trim: September;
  }
}

@media April {
  .c0 {
    leading-trim: November;
  }
}

@media June {
  .c0 {
    leading-trim: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    leading-trim: January;
  }
}

@media April {
  .c0 {
    leading-trim: December;
  }
}

@media January {
  .c0 {
    leading-trim: April;
  }
}

@media April {
  .c0 {
    leading-trim: May;
  }
}

@media June {
  .c0 {
    leading-trim: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    leading-trim: January;
  }
}

@media April {
  .c0 {
    leading-trim: December;
  }
}

@media January {
  .c0 {
    leading-trim: April;
  }
}

@media April {
  .c0 {
    leading-trim: May;
  }
}

@media June {
  .c0 {
    leading-trim: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders postitive number 1`] = `
Array [
  .c0 {
  leading-trim: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders string 1`] = `
Array [
  .c0 {
  leading-trim: July;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: July;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: June;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: June;
}

<div
    className="c0"
  />,
]
`;

exports[`leadingTrim renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`leadingTrim renders valid theme path 1`] = `
Array [
  .c0 {
  leading-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  leading-trim: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
